--- a/max-messenger-miniapp/index.html
+++ b/max-messenger-miniapp/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>max-messenger-miniapp</title>
+    <meta name="theme-color" content="#121218" />
+    <meta name="description" content="Zenith - Приложение для повышения продуктивности" />
+    <title>Zenith - Продуктивность</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
